--- a/notebooks/b3-vgae.ipynb
+++ b/notebooks/b3-vgae.ipynb
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -751,8 +751,21 @@
      "text": [
       "Epoch: 000, AUC: 0.8848, AP: 0.8679\n",
       "tensor([0.0018, 0.0015, 0.0010,  ..., 0.0062, 0.0014, 0.0046],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "Epoch: 100, AUC: 0.9569, AP: 0.9548\n",
+      "tensor([2.0673, 1.7371, 2.1393,  ..., 3.2097, 2.3214, 2.3448],\n",
       "       grad_fn=<SumBackward1>)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.9652286782051115, 0.9639513298339782)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -778,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "HgOALzDbF9QC"
    },
@@ -836,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "petz3lOeF9QC"
    },
@@ -857,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "PozuVVedF9QC"
    },
@@ -871,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "J1-z0JxRF9QD"
    },
@@ -883,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "id": "VgYq46vWF9QD"
    },
@@ -918,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -926,7 +939,27 @@
     "id": "I-KcMNs1F9QE",
     "outputId": "a88800ba-1075-4864-cd3b-f345ad839e31"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training vgae\n",
+      "Epoch: 000, AUC: 0.8553, AP: 0.8463\n",
+      "Epoch: 100, AUC: 0.9440, AP: 0.9435\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.9545658971021387, 0.9538791298897771)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_vgae()"
    ]
@@ -951,7 +984,111 @@
     "id": "wrzVkkliF9QE",
     "outputId": "223acb3d-0012-4491-efbd-1c3f710b83dd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running experiments on PubMed\n",
+      "1\n",
+      "training gae\n",
+      "Epoch: 000, AUC: 0.9654, AP: 0.9641\n",
+      "tensor([3.3035, 2.5997, 2.3128,  ..., 3.4618, 3.0085, 2.2022],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "Epoch: 100, AUC: 0.9696, AP: 0.9688\n",
+      "tensor([4.3328, 3.7715, 2.9173,  ..., 3.7803, 2.8036, 2.8268],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "training vgae\n",
+      "Epoch: 000, AUC: 0.9549, AP: 0.9542\n",
+      "Epoch: 100, AUC: 0.9580, AP: 0.9576\n",
+      "2\n",
+      "training gae\n",
+      "Epoch: 000, AUC: 0.9709, AP: 0.9708\n",
+      "tensor([3.7222, 3.2985, 3.1669,  ..., 4.0487, 2.8500, 2.4765],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "Epoch: 100, AUC: 0.9712, AP: 0.9713\n",
+      "tensor([3.6863, 3.2672, 3.2619,  ..., 4.1075, 3.4724, 2.4484],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "training vgae\n",
+      "Epoch: 000, AUC: 0.9647, AP: 0.9635\n",
+      "Epoch: 100, AUC: 0.9670, AP: 0.9666\n",
+      "3\n",
+      "training gae\n",
+      "Epoch: 000, AUC: 0.9707, AP: 0.9717\n",
+      "tensor([3.8676, 3.3377, 3.3705,  ..., 3.8464, 3.3975, 2.2367],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "Epoch: 100, AUC: 0.9703, AP: 0.9721\n",
+      "tensor([4.0494, 3.4967, 3.2302,  ..., 3.7433, 3.5860, 2.5312],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "training vgae\n",
+      "Epoch: 000, AUC: 0.9672, AP: 0.9672\n",
+      "Epoch: 100, AUC: 0.9679, AP: 0.9682\n",
+      "4\n",
+      "training gae\n",
+      "Epoch: 000, AUC: 0.9701, AP: 0.9725\n",
+      "tensor([4.0783, 3.5088, 3.3343,  ..., 3.6315, 3.5434, 2.6628],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "Epoch: 100, AUC: 0.9710, AP: 0.9734\n",
+      "tensor([4.1090, 3.5564, 3.3336,  ..., 3.5745, 3.4291, 2.5682],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "training vgae\n",
+      "Epoch: 000, AUC: 0.9693, AP: 0.9696\n",
+      "Epoch: 100, AUC: 0.9692, AP: 0.9697\n",
+      "5\n",
+      "training gae\n",
+      "Epoch: 000, AUC: 0.9709, AP: 0.9740\n",
+      "tensor([4.0621, 3.4891, 3.3194,  ..., 3.8242, 3.4696, 2.6382],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "Epoch: 100, AUC: 0.9715, AP: 0.9746\n",
+      "tensor([4.3505, 3.7682, 3.4344,  ..., 3.9120, 3.3839, 2.7199],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "training vgae\n",
+      "Epoch: 000, AUC: 0.9684, AP: 0.9692\n",
+      "Epoch: 100, AUC: 0.9687, AP: 0.9697\n",
+      "6\n",
+      "training gae\n",
+      "Epoch: 000, AUC: 0.9711, AP: 0.9742\n",
+      "tensor([4.2963, 3.7185, 3.4123,  ..., 3.8719, 3.4481, 2.6984],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "Epoch: 100, AUC: 0.9712, AP: 0.9745\n",
+      "tensor([4.2256, 3.6338, 3.3481,  ..., 3.8477, 3.4657, 2.7647],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "training vgae\n",
+      "Epoch: 000, AUC: 0.9680, AP: 0.9692\n",
+      "Epoch: 100, AUC: 0.9678, AP: 0.9693\n",
+      "7\n",
+      "training gae\n",
+      "Epoch: 000, AUC: 0.9714, AP: 0.9744\n",
+      "tensor([4.2707, 3.7081, 3.6083,  ..., 3.7307, 3.3884, 2.9472],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "Epoch: 100, AUC: 0.9711, AP: 0.9743\n",
+      "tensor([4.4250, 3.7743, 3.4327,  ..., 3.8191, 3.4212, 3.0080],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "training vgae\n",
+      "Epoch: 000, AUC: 0.9672, AP: 0.9691\n",
+      "Epoch: 100, AUC: 0.9665, AP: 0.9689\n",
+      "8\n",
+      "training gae\n",
+      "Epoch: 000, AUC: 0.9702, AP: 0.9735\n",
+      "tensor([4.4499, 3.8146, 3.4998,  ..., 3.7386, 3.3675, 3.0238],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "Epoch: 100, AUC: 0.9702, AP: 0.9736\n",
+      "tensor([4.3525, 3.7212, 3.6083,  ..., 3.8151, 3.2367, 3.0614],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "training vgae\n",
+      "Epoch: 000, AUC: 0.9666, AP: 0.9691\n",
+      "Epoch: 100, AUC: 0.9661, AP: 0.9688\n",
+      "9\n",
+      "training gae\n",
+      "Epoch: 000, AUC: 0.9698, AP: 0.9733\n",
+      "tensor([4.4127, 3.7765, 3.6704,  ..., 4.0187, 3.2919, 3.2145],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "Epoch: 100, AUC: 0.9695, AP: 0.9731\n",
+      "tensor([4.3412, 3.6784, 3.7071,  ..., 3.8795, 3.2816, 3.2005],\n",
+      "       grad_fn=<SumBackward1>)\n"
+     ]
+    }
+   ],
    "source": [
     "print('running experiments on', dataset_name)\n",
     "gae_results = []\n",
