--- a/notebooks/b3-vgae.ipynb
+++ b/notebooks/b3-vgae.ipynb
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1085,7 +1085,21 @@
       "       grad_fn=<SumBackward1>)\n",
       "Epoch: 100, AUC: 0.9695, AP: 0.9731\n",
       "tensor([4.3412, 3.6784, 3.7071,  ..., 3.8795, 3.2816, 3.2005],\n",
-      "       grad_fn=<SumBackward1>)\n"
+      "       grad_fn=<SumBackward1>)\n",
+      "training vgae\n",
+      "Epoch: 000, AUC: 0.9663, AP: 0.9689\n",
+      "Epoch: 100, AUC: 0.9664, AP: 0.9693\n",
+      "10\n",
+      "training gae\n",
+      "Epoch: 000, AUC: 0.9688, AP: 0.9726\n",
+      "tensor([4.3592, 3.7303, 3.5627,  ..., 3.8412, 3.2326, 3.1819],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "Epoch: 100, AUC: 0.9688, AP: 0.9725\n",
+      "tensor([4.5008, 3.9006, 3.6521,  ..., 3.7954, 3.2149, 3.1335],\n",
+      "       grad_fn=<SumBackward1>)\n",
+      "training vgae\n",
+      "Epoch: 000, AUC: 0.9661, AP: 0.9693\n",
+      "Epoch: 100, AUC: 0.9656, AP: 0.9690\n"
      ]
     }
    ],
@@ -1102,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1111,7 +1125,17 @@
     "outputId": "96cd3ed5-9036-4950-9cd3-c295637a6505",
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GAE results\n",
+      "AUC: mean = 0.970, std = 0.001\n",
+      "AP : mean = 0.973, std = 0.001\n"
+     ]
+    }
+   ],
    "source": [
     "print('GAE results')\n",
     "gae_aucs, gae_aps = list(zip(*gae_results))\n",
@@ -1121,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1129,7 +1153,17 @@
     "id": "wRE-GBTyF9QE",
     "outputId": "b050701b-9dc0-4351-e88f-69309224338c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VGAE results\n",
+      "AUC: mean = 0.967, std = 0.001\n",
+      "AP : mean = 0.968, std = 0.002\n"
+     ]
+    }
+   ],
    "source": [
     "print('VGAE results')\n",
     "vgae_aucs, vgae_aps = list(zip(*vgae_results))\n",
