Delete empty cell

--- a/notebooks/b1-transition.ipynb
+++ b/notebooks/b1-transition.ipynb
@@ -1162,7 +1162,8 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
-    "id": "hFcI9fbScxMK"
+    "id": "hFcI9fbScxMK",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1208,7 +1209,8 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "id": "BsuI56rgcxMK"
+    "id": "BsuI56rgcxMK",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1237,15 +1239,6 @@
     "print(tsne_embedded.shape)\n",
     "print(tsne_embedded[:10,])\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "k-KP9K_HcxMK"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
