Import dgl in the right order

--- a/notebooks/b2-graphsage.ipynb
+++ b/notebooks/b2-graphsage.ipynb
@@ -50,7 +50,6 @@
     "import matplotlib.animation as animation\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import dgl\n",
     "import time\n",
     "\n",
     "import torch\n",
@@ -60,7 +59,9 @@
     "if not torch.cuda.is_available():\n",
     "  !pip install dgl\n",
     "else:\n",
-    "  !pip install dgl-cu110"
+    "  !pip install dgl-cu110\n",
+    "\n",
+    "import dgl"
    ]
   },
   {
