--- a/notebooks/b1-transition.ipynb
+++ b/notebooks/b1-transition.ipynb
@@ -38,7 +38,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "ddJ72XKZcxL4",
-    "outputId": "31b35db5-a24a-4f90-c927-3c2066e1d6bc"
+    "outputId": "836b5297-52ba-4141-f167-75ac3e1c1864"
    },
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "W9_19GOFcxL-",
-    "outputId": "01928911-afec-4d7f-9e5d-40cde939ff3f"
+    "outputId": "ad71a02f-896e-43ab-93cf-d262345236f0"
    },
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
     "# Adopting the accepted ML notation of input data (x) and labels (y)\n",
     "stargazer_y = stargazer_labels[:,1].astype(int)\n",
     "\n",
-    "print(stargazer_y)"
+    "print(f'Graph indices: {stargazer_labels[:10,0].astype(int)}, labels: {stargazer_y[:10]}')"
    ]
   },
   {
@@ -217,23 +217,25 @@
     "# are no node or edge features, so predictions are made purely based on \n",
     "# undirected graph properties\n",
     "with open(f\"{fp_data_stargazer}/git_edges.json\") as f:\n",
-    "  stargazer_edges = json.load(f)\n",
-    "\n",
-    "# print(stargazer_edges)"
+    "  stargazer_edges = json.load(f)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "7NjxUgpmcxL-"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "7NjxUgpmcxL-",
+    "outputId": "f6841a7f-e660-49b0-c6ce-95aef7cfc948"
    },
    "outputs": [],
    "source": [
     "# Every item in this dictionary are the edges for a single graph, where each \n",
     "# edge is defined as a [vertex index, vertex index] pair. Here we show the \n",
     "# first 10 edges from graph 19\n",
-    "stargazer_edges['19'][:10]"
+    "stargazer_edges['19'][:10]\n"
    ]
   },
   {
@@ -265,23 +267,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "PvWcfkZycxMA"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "PvWcfkZycxMA",
+    "outputId": "9d8047ea-9a83-4dfd-9ff8-5ab393fdf67e"
    },
    "outputs": [],
    "source": [
     "# We can use this data to build each of the 12725 graphs as a single DGL\n",
     "# graph object, thus forming our graph dataset\n",
     "stargazer_x = []\n",
-    "for i in range(12725):\n",
+    "for i in range(len(stargazer_edges)):\n",
     "    G = make_stargazer_graph(i)\n",
-    "    stargazer_x.append(G)"
+    "    stargazer_x.append(G)\n",
+    "print(f'First graph: {stargazer_x[19]}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "Ypf3Ml1EcxMA"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 353
+    },
+    "id": "Ypf3Ml1EcxMA",
+    "outputId": "36ea0c50-4c1f-4fda-e23d-e5a5fa4f57ad"
    },
    "outputs": [],
    "source": [
@@ -293,7 +305,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "g8tj1SqOcxMB"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 353
+    },
+    "id": "g8tj1SqOcxMB",
+    "outputId": "ea699015-ed9d-442e-d63f-6d5171aa1dbe"
    },
    "outputs": [],
    "source": [
@@ -311,6 +328,8 @@
    },
    "source": [
     "### GitHub Web or Machine Learning Dataset\n",
+    "For the purpose of this example, we will consider only the Stargazer's Dataset, but its good to be aware of different kinds of datasets, such as the following.\n",
+    "\n",
     "One single graph representing the GitHub social network: vertices are users (who have starred at least 10 repositories) and edges represent if they mutually follow eachother. Each node has input features derived from profile data (location, repositories starred, employer and e-mail address), and belongs to one of two classes (derived from the user's job title): a web developer or machine learning developer. \n",
     "\n",
     "**Note that using a single graph represents a departure from traditional supervised machine learning, where we typically use hundreds or thousands of training instances**. In this application, it is perhaps easier to consider the **vertices** of the graph as training instances. Indeed, we would reserve some vertices for training and some for testing."
@@ -320,7 +339,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "d_kjcKsXcxMC"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "d_kjcKsXcxMC",
+    "outputId": "09e5cbd8-f003-4bce-9910-a8189c036552"
    },
    "outputs": [],
    "source": [
@@ -329,7 +352,7 @@
     "webmluser_labels = np.loadtxt(f\"{fp_data_webmluser}/musae_git_target.csv\", \\\n",
     "                                  delimiter=\",\", skiprows=1, usecols=[0,2])\n",
     "webmluser_y = webmluser_labels[:,1].astype(int)\n",
-    "print(webmluser_labels)"
+    "print(f'Vertex indices: {webmluser_labels[:10,0].astype(int)}, labels: {webmluser_y[:10]}')"
    ]
   },
   {
@@ -349,7 +372,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "k-mYCxnncxMC"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "k-mYCxnncxMC",
+    "outputId": "be503040-da0d-47ab-8f3d-92fb403a0a5a"
    },
    "outputs": [],
    "source": [
@@ -379,12 +406,11 @@
    },
    "outputs": [],
    "source": [
-    "print(type(webmluser_edges[0,0]))\n",
     "# We only need to make one graph here, and that is our 'dataset'\n",
-    "def make_webmluser_graph():\n",
+    "def make_webmluser_graph(edges):\n",
     "    # Define every edge by its source and destination vertex ids\n",
-    "    src = webmluser_edges[:,0].astype(int)\n",
-    "    dst = webmluser_edges[:,1].astype(int)\n",
+    "    src = edges[:,0].astype(int)\n",
+    "    dst = edges[:,1].astype(int)\n",
     "    \n",
     "    # Edges are directional in DGL; Make them undirectional by making them \n",
     "    # go both ways\n",
@@ -401,27 +427,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "gXX34GKncxMD"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "gXX34GKncxMD",
+    "outputId": "63552a3b-7286-42b6-90ea-32b3e2473d56"
    },
    "outputs": [],
    "source": [
     "# Build the graph from the data - note that this is a big graph\n",
-    "webmluser_x = make_webmluser_graph()\n",
+    "# here only the structure is used to build the graph, the features are not used\n",
+    "# but those can also be inserted in a DGL graph\n",
+    "webmluser_x = make_webmluser_graph(webmluser_edges)\n",
     "print(f\"{webmluser_x.number_of_nodes()} nodes\")\n",
     "print(f\"{webmluser_x.number_of_edges()} edges\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "3X2BvJSPcxMD"
-   },
-   "outputs": [],
-   "source": [
-    "# For the purpose of this example, we will consider only the\n",
-    "# Stargazer's Dataset, but its good to be aware of different kinds of \n",
-    "# datasets"
    ]
   },
   {
@@ -460,12 +479,9 @@
     "        self.classify = nn.Linear(num_hidden_features[-1], 2)\n",
     "\n",
     "    def forward(self, g):\n",
-    "        # Start with just the degree as a feature\n",
-    "        h = g.in_degrees().view(-1, 1).float()\n",
-    "        for i in range(len(self.convs)):\n",
-    "            h = self.convs[i](g, h)\n",
-    "            h = torch.relu(h)\n",
-    "            \n",
+    "        # Calculate the hidden embeddings\n",
+    "        h = self.hidden(g)\n",
+    "\n",
     "        # Calculate graph representation by averaging all the node \n",
     "        # representations, thus making a graph representation\n",
     "        g.ndata['h'] = h\n",
@@ -540,9 +556,6 @@
     "\n",
     "            # And compare to the true value\n",
     "            y = F.one_hot(torch.tensor(batch_y), num_classes=2).float()\n",
-    "\n",
-    "            #print(y_hat)\n",
-    "            #print(y)\n",
     "\n",
     "            # Calculate loss \n",
     "            loss = loss_func(y_hat, y)\n",
@@ -619,7 +632,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "57hLApxfcxMG"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "57hLApxfcxMG",
+    "outputId": "171428f9-6a19-4cd9-8def-ae3282ca8193"
    },
    "outputs": [],
    "source": [
@@ -642,7 +659,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "X0Ph6xKVcxMH"
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "X0Ph6xKVcxMH",
+    "outputId": "e8c43ee3-ac41-49d0-99da-7e28d22e40c1"
    },
    "outputs": [],
    "source": [
@@ -656,7 +677,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "pqYtNJsEcxMH"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 282
+    },
+    "id": "pqYtNJsEcxMH",
+    "outputId": "0e076a09-3570-4db6-bf5a-2edf5550eefb"
    },
    "outputs": [],
    "source": [
@@ -704,7 +730,7 @@
    },
    "outputs": [],
    "source": [
-    "def train_test_architecture(num_hidden_features, num_epochs, plot_loss=False):\n",
+    "def train_test_architecture(num_hidden_features, num_epochs, plot_loss=True):\n",
     "    # Make architecture and train\n",
     "    gnn_run = StargazerGNN(num_hidden_features)\n",
     "    epoch_losses = train_stargazer_gnn(gnn_run, num_epochs)\n",
@@ -746,7 +772,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "oHK4Z8_EcxMI"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 802
+    },
+    "id": "oHK4Z8_EcxMI",
+    "outputId": "8004c20e-aa72-4cdb-eaed-2b3dcb3d8d0a"
    },
    "outputs": [],
    "source": [
@@ -757,7 +788,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "8XgX-TsTcxMJ"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 801
+    },
+    "id": "8XgX-TsTcxMJ",
+    "outputId": "99c1c6d9-6b5d-410e-d168-b41a6cbbd9aa"
    },
    "outputs": [],
    "source": [
@@ -768,7 +804,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "9kr5GU0WcxMJ"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 801
+    },
+    "id": "9kr5GU0WcxMJ",
+    "outputId": "da69c24a-3daf-49f1-e231-9d926b5737d4"
    },
    "outputs": [],
    "source": [
@@ -779,7 +820,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "mEUh0mOucxMJ"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 804
+    },
+    "id": "mEUh0mOucxMJ",
+    "outputId": "96d1ccfc-5431-4b47-a5d1-a9f5ac56894c"
    },
    "outputs": [],
    "source": [
@@ -801,28 +847,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 801
+    },
     "id": "hFcI9fbScxMK",
+    "outputId": "23bdfb6c-4bbd-413b-d4a1-d1773b2a9120",
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "train_test_architecture([1, 32, 32, 32, 32, 32, 32, 32], 6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "BsuI56rgcxMK",
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "print(hidden.shape)\n",
-    "# print(hidden)\n",
-    "tsne_embedded = tsne.fit_transform(hidden)\n",
-    "print(tsne_embedded.shape)\n",
-    "print(tsne_embedded[:10,])\n"
    ]
   }
  ],
