Update packages installation

--- a/notebooks/b3-vgae.ipynb
+++ b/notebooks/b3-vgae.ipynb
@@ -41,13 +41,30 @@
    },
    "outputs": [],
    "source": [
+    "# Add this in a Google Colab cell to install the correct version of Pytorch Geometric.\n",
+    "import torch\n",
+    "\n",
+    "def format_pytorch_version(version):\n",
+    "  return version.split('+')[0]\n",
+    "\n",
+    "TORCH_version = torch.__version__\n",
+    "TORCH = format_pytorch_version(TORCH_version)\n",
+    "\n",
+    "def format_cuda_version(version):\n",
+    "  return 'cu' + version.replace('.', '')\n",
+    "\n",
+    "CUDA_version = torch.version.cuda\n",
+    "CUDA = format_cuda_version(CUDA_version)\n",
+    "\n",
+    "!pip install torch-scatter     -f https://pytorch-geometric.com/whl/torch-{TORCH}+{CUDA}.html\n",
+    "!pip install torch-sparse      -f https://pytorch-geometric.com/whl/torch-{TORCH}+{CUDA}.html\n",
+    "# !pip install torch-cluster     -f https://pytorch-geometric.com/whl/torch-{TORCH}+{CUDA}.html\n",
+    "# !pip install torch-spline-conv -f https://pytorch-geometric.com/whl/torch-{TORCH}+{CUDA}.html\n",
+    "!pip install torch-geometric\n",
     "!pip install python-igraph\n",
-    "!pip install torch_geometric\n",
-    "!pip install torch_scatter\n",
-    "!pip install torch-sparse\n",
     "!pip install tensorboardX\n",
     "\n",
-    "import torch\n",
+    "\n",
     "import igraph as ig\n",
     "import random\n",
     "from datetime import datetime\n",
@@ -245,9 +262,9 @@
    },
    "outputs": [],
    "source": [
+    "print(dataset)\n",
     "print(data.train_mask)\n",
-    "print(data.y)\n",
-    "print(dataset)"
+    "print(data.y)"
    ]
   },
   {
@@ -311,8 +328,8 @@
    },
    "outputs": [],
    "source": [
-    "print(train_pos_edge_index[0:2,0:10])\n",
     "print(train_pos_edge_index.shape)\n",
+    "print(train_pos_edge_index[:,0:10])\n",
     "print(data.val_pos_edge_index.shape)\n",
     "print(data.test_pos_edge_index.shape)"
    ]
@@ -476,14 +493,7 @@
    "source": [
     "# To decode embeddings and attempt input reconstruction, we can use the standard InnerProductDecoder\n",
     "class InnerProductDecoder(torch.nn.Module):\n",
-    "    r\"\"\"The inner product decoder from the `\"Variational Graph Auto-Encoders\"\n",
-    "    <https://arxiv.org/abs/1611.07308>`_ paper\n",
     "\n",
-    "    .. math::\n",
-    "        \\sigma(\\mathbf{Z}\\mathbf{Z}^{\\top})\n",
-    "\n",
-    "    where :math:`\\mathbf{Z} \\in \\mathbb{R}^{N \\times d}` denotes the latent\n",
-    "    space produced by the encoder.\"\"\"\n",
     "    def forward(self, z, edge_index, sigmoid=True):\n",
     "        r\"\"\"Decodes the latent variables :obj:`z` into edge probabilities for\n",
     "        the given node-pairs :obj:`edge_index`.\n",
@@ -603,9 +613,8 @@
     "        auc, ap = test(gae, data.test_pos_edge_index, data.test_neg_edge_index)\n",
     "        writer.add_scalar(\"AUC\", auc, epoch)\n",
     "        writer.add_scalar(\"AP\", ap, epoch)\n",
-    "        if epoch % 100 == 0:\n",
+    "        if (epoch+1) % 100 == 0:\n",
     "            print('Epoch: {:03d}, AUC: {:.4f}, AP: {:.4f}'.format(epoch, auc, ap))\n",
-    "            print((z[train_pos_edge_index[0]] * z[train_pos_edge_index[1]]).sum(dim=1))\n",
     "    return auc, ap"
    ]
   },
@@ -621,7 +630,9 @@
    },
    "outputs": [],
    "source": [
-    "train_gae()"
+    "train_gae()\n",
+    "z = gae.encode(x, train_pos_edge_index)\n",
+    "print((z[train_pos_edge_index[0]] * z[train_pos_edge_index[1]]).sum(dim=1))"
    ]
   },
   {
@@ -776,7 +787,7 @@
     "        auc, ap = test(vgae, data.test_pos_edge_index, data.test_neg_edge_index)\n",
     "        writer.add_scalar(\"AUC\", auc, epoch)\n",
     "        writer.add_scalar(\"AP\", ap, epoch)\n",
-    "        if epoch % 100 == 0:\n",
+    "        if (epoch+1) % 100 == 0:\n",
     "            print('Epoch: {:03d}, AUC: {:.4f}, AP: {:.4f}'.format(epoch, auc, ap))\n",
     "    return auc, ap"
    ]
