--- a/notebooks/b3-vgae.ipynb
+++ b/notebooks/b3-vgae.ipynb
@@ -33,37 +33,41 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "0hybVfUaF9Pw",
-    "outputId": "e30c62f6-3395-48f2-a57b-0e049bb9b9ef"
+    "id": "0hybVfUaF9Pw"
    },
    "outputs": [],
    "source": [
-    "# Add this in a Google Colab cell to install the correct version of Pytorch Geometric.\n",
     "import torch\n",
+    "# check whether running on colab\n",
+    "import sys\n",
+    "IN_COLAB = 'google.colab' in sys.modules\n",
     "\n",
-    "def format_pytorch_version(version):\n",
-    "  return version.split('+')[0]\n",
+    "if IN_COLAB:\n",
+    "  # Add this in a Google Colab cell to install the correct version of Pytorch Geometric.\n",
     "\n",
-    "TORCH_version = torch.__version__\n",
-    "TORCH = format_pytorch_version(TORCH_version)\n",
+    "    def format_pytorch_version(version):\n",
+    "      return version.split('+')[0]\n",
     "\n",
-    "def format_cuda_version(version):\n",
-    "  return 'cu' + version.replace('.', '')\n",
+    "    TORCH_version = torch.__version__\n",
+    "    TORCH = format_pytorch_version(TORCH_version)\n",
     "\n",
-    "CUDA_version = torch.version.cuda\n",
-    "CUDA = format_cuda_version(CUDA_version)\n",
+    "    def format_cuda_version(version):\n",
+    "      return 'cu' + version.replace('.', '')\n",
     "\n",
-    "!pip install torch-scatter     -f https://pytorch-geometric.com/whl/torch-{TORCH}+{CUDA}.html\n",
-    "!pip install torch-sparse      -f https://pytorch-geometric.com/whl/torch-{TORCH}+{CUDA}.html\n",
-    "# !pip install torch-cluster     -f https://pytorch-geometric.com/whl/torch-{TORCH}+{CUDA}.html\n",
-    "# !pip install torch-spline-conv -f https://pytorch-geometric.com/whl/torch-{TORCH}+{CUDA}.html\n",
-    "!pip install torch-geometric\n",
-    "!pip install python-igraph\n",
-    "!pip install tensorboardX\n",
+    "    CUDA_version = torch.version.cuda\n",
+    "    CUDA = format_cuda_version(CUDA_version)\n",
     "\n",
+    "    !pip install torch-scatter     -f https://pytorch-geometric.com/whl/torch-{TORCH}+{CUDA}.html\n",
+    "    !pip install torch-sparse      -f https://pytorch-geometric.com/whl/torch-{TORCH}+{CUDA}.html\n",
+    "    # !pip install torch-cluster     -f https://pytorch-geometric.com/whl/torch-{TORCH}+{CUDA}.html\n",
+    "    # !pip install torch-spline-conv -f https://pytorch-geometric.com/whl/torch-{TORCH}+{CUDA}.html\n",
+    "    !pip install torch-geometric\n",
+    "    !pip install python-igraph\n",
+    "    !pip install tensorboardX\n",
+    "\n",
+    "    !apt install libcairo2-dev pkg-config python3-dev\n",
+    "\n",
+    "!pip install pycairo\n",
     "\n",
     "import igraph as ig\n",
     "import random\n",
@@ -89,11 +93,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "IJSKEEqaF9Px",
-    "outputId": "0731f703-bc8b-4484-dce5-f546737f8741"
+    "id": "IJSKEEqaF9Px"
    },
    "outputs": [],
    "source": [
@@ -115,11 +115,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "_i2gS3LOF9Py",
-    "outputId": "d14c3790-3484-4657-d73d-7856d5121cc8"
+    "id": "_i2gS3LOF9Py"
    },
    "outputs": [],
    "source": [
@@ -134,11 +130,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "Lr7L3WUUF9Pz",
-    "outputId": "18e48bad-a53e-4358-c32b-a90e2783f384"
+    "id": "Lr7L3WUUF9Pz"
    },
    "outputs": [],
    "source": [
@@ -225,7 +217,8 @@
     "    # read and show the plot\n",
     "    img = Image.open(outfile)\n",
     "    fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "    ax.imshow(img)"
+    "    ax.imshow(img)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -237,7 +230,7 @@
    "outputs": [],
    "source": [
     "# plot the graph - ok to run on cora/citeseer but slower on pubmed/reddit etc\n",
-    "if data.num_nodes < 5000:\n",
+    "if data.num_nodes < 50000 and not IN_COLAB:\n",
     "    plot(data)"
    ]
   },
@@ -254,11 +247,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "dUbstNOzF9P5",
-    "outputId": "7fc38a8c-93c4-4bf1-e892-35b15b7258f7"
+    "id": "dUbstNOzF9P5"
    },
    "outputs": [],
    "source": [
@@ -271,11 +260,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "qx9S9O-KF9P6",
-    "outputId": "14838b31-c56b-4474-9452-d1ab17e9b895"
+    "id": "qx9S9O-KF9P6"
    },
    "outputs": [],
    "source": [
@@ -290,11 +275,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "rx8YWbmLF9P7",
-    "outputId": "fdfad531-f394-49b0-e261-0441a48f11df"
+    "id": "rx8YWbmLF9P7"
    },
    "outputs": [],
    "source": [
@@ -320,11 +301,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "eMKaiK6XF9P8",
-    "outputId": "301dcef6-c10f-426d-f982-0882cc6f8b02"
+    "id": "eMKaiK6XF9P8"
    },
    "outputs": [],
    "source": [
@@ -622,11 +599,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "G8RX--yrF9QB",
-    "outputId": "68773aed-f75d-4e79-ef13-e383ec5dab2d"
+    "id": "G8RX--yrF9QB"
    },
    "outputs": [],
    "source": [
@@ -796,11 +769,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "I-KcMNs1F9QE",
-    "outputId": "a88800ba-1075-4864-cd3b-f345ad839e31"
+    "id": "I-KcMNs1F9QE"
    },
    "outputs": [],
    "source": [
@@ -821,11 +790,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "wrzVkkliF9QE",
-    "outputId": "223acb3d-0012-4491-efbd-1c3f710b83dd"
+    "id": "wrzVkkliF9QE"
    },
    "outputs": [],
    "source": [
@@ -843,11 +808,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
     "id": "H3IOQLNAF9QE",
-    "outputId": "96cd3ed5-9036-4950-9cd3-c295637a6505",
     "scrolled": true
    },
    "outputs": [],
@@ -862,11 +823,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "wRE-GBTyF9QE",
-    "outputId": "b050701b-9dc0-4351-e88f-69309224338c"
+    "id": "wRE-GBTyF9QE"
    },
    "outputs": [],
    "source": [
@@ -887,6 +844,7 @@
   }
  ],
  "metadata": {
+  "accelerator": "GPU",
   "colab": {
    "name": "b3-vgae.ipynb",
    "provenance": []
